--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ email: taffgal@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   This is my online Resume.
 baseurl: / # the subpath of your site, e.g. /blog
-url: "https://taffo73.github.io/Resume2/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://taffo73.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: wedi_blino
 github_username:  taffo73
 
