--- a/_data/experiences.yaml
+++ b/_data/experiences.yaml
@@ -7,7 +7,7 @@
     Assisting clients with installation, repair, and troubleshooting of their PCs, MAC, printers,
     smart phones, surveillance equipment, smart devices, home monitoring, software, computer hardware in their homes and offices.
 
-Key Achievements;
+Key Achievements-
 
 • 	Install and troubleshoot PC's, Mac's, Networking setups, & Smart Home devices.
 •	  Manage my own route & clients.
@@ -25,7 +25,7 @@ Key Achievements;
     Perform standard audio and video equipment installation in client's homes, including delivering AV equipment ordered by the customer, 
     wall mounting televisions, setting up AV systems, and assisting the custom team with jobs. 
 
-Key Achievements;
+Key Achievements-
 •	  Installed TV and AV systems. Assisted the custom install teams with installs.
 •	  Configured routers with access points in client's homes. 
 •	  Control 4-home automation.
@@ -38,7 +38,7 @@ Key Achievements;
 
     Programmed and delivered AV products to clients, Ran wires through walls. Installed projector screens and speakers.
 
-Key Achievements;
+Key Achievements-
 •   Assisted the Custom teams with installations
 •   Installed TV and AV Systems 
 
@@ -51,7 +51,7 @@ Key Achievements;
     Provided support for the Insure and Go users and infrastructure. Provided support for Windows operating systems, software applications used in-house, 
     telephone and email. Performed routine maintenance of the phone system and ensured the daily data backups were completed. 
 
-Key Achievements;
+Key Achievements-
 •	  Created a scripted system to create new user's and provide them with required access for their department, which saved time for the company.
 •	  Participated in the unveiling of a new VPN client for home employees.
 •	  Built, configured, and troubleshot servers
@@ -64,24 +64,8 @@ Key Achievements;
 
     Customer service for Insurance policy holders.
 
-Key Achievements;
+Key Achievements-
 •   Resolved customer questions about the insurance policies.
-•   Consulted with underwriters to resolve any questions/issues. 
-  apps:
-    - name:
-      link: 
-      desc: 
-
-    - name:
-      link: 
-      desc: 
-
-    - name:
-      link: 
-      desc:
-
-    - name:
-      link: 
-      desc: 
+•   Consulted with underwriters to resolve any questions/issues.
 
 
