--- a/_data/experiences.yaml
+++ b/_data/experiences.yaml
@@ -10,7 +10,7 @@
   	Install and troubleshoot PC's, Mac's, Networking setups, & Smart Home devices.
 	  Manage my own route & clients.
 	  Worked remotely during COVID. Performed normal duties over LogMeIn.
-	  Participated in the internal management training program called "Jedi"
+	  Participated in the internal management training program called Jedi
 	  Regularly cover for my manager whilst they are on PTO and assume some of the roles
     Selected as a S.T.A.R trainer to help train new hires within my market area
 
@@ -21,10 +21,10 @@
   description: 
 
     Perform standard audio and video equipment installation in client's homes, including delivering AV equipment ordered by the customer, 
-    wall mounting televisions, setting up AV systems, and assisting the custom team with jobs. 
-    Installed TV and AV systems. Assisted the custom install teams with installs.
-	  Configured routers with access points in client's homes. 
-	  Control 4-home automation.
+    wall mounting televisions, setting up AV systems, and assisting the custom team with jobs 
+    Installed TV and AV systems. Assisted the custom install teams with installs
+	  Configured routers with access points in client's homes 
+	  Control 4-home automation
 
 - title: Delivery Specialist
   period: October 2016 - October 2016
@@ -43,9 +43,9 @@
   description: 
 
     Provided support for the Insure and Go users and infrastructure. Provided support for Windows operating systems, software applications used in-house, 
-    telephone and email. Performed routine maintenance of the phone system and ensured the daily data backups were completed. 
+    telephone and email, Performed routine maintenance of the phone system and ensured the daily data backups were completed, 
     Created a scripted system to create new user's and provide them with required access for their department, which saved time for the company.
-	  Participated in the unveiling of a new VPN client for home employees.
+	  Participated in the unveiling of a new VPN client for home employees,
 	  Built, configured, and troubleshot servers
 
 - title: Customer Service Agent
@@ -54,8 +54,8 @@
   location: United Kingdom
   description: 
 
-    Customer service for Insurance policy holders.
-    Resolved customer questions about the insurance policies.
-    Consulted with underwriters to resolve any questions/issues.
+    Customer service for Insurance policy holders
+    Resolved customer questions about the insurance policies
+    Consulted with underwriters to resolve any questions/issues
 
 
