--- a/_data/experiences.yaml
+++ b/_data/experiences.yaml
@@ -3,13 +3,11 @@
   company: Geek Squad
   location: Nashville, TN
   description: 
-    
     Assisting clients with installation, repair, and troubleshooting of their PCs, MAC, printers,
     smart phones, surveillance equipment, smart devices, home monitoring, software, computer hardware in their homes and offices.
-
-  	Install and troubleshoot PC's, Mac's, Networking setups, & Smart Home devices.
-	  Manage my own route & clients.
-	  Worked remotely during COVID. Performed normal duties over LogMeIn.
+    Install and troubleshoot PCs, Macs, Networking setups, & Smart Home devices
+	  Managed my own route & clients
+	  Worked remotely during COVID. Performed normal duties over LogMeIn
 	  Participated in the internal management training program called Jedi
 	  Regularly cover for my manager whilst they are on PTO and assume some of the roles
     Selected as a S.T.A.R trainer to help train new hires within my market area
@@ -19,8 +17,7 @@
   company: Magnolia AV
   location: Brentwood, TN
   description: 
-
-    Perform standard audio and video equipment installation in client's homes, including delivering AV equipment ordered by the customer, 
+    Perform standard audio and video equipment installation in clients homes, including delivering AV equipment ordered by the customer, 
     wall mounting televisions, setting up AV systems, and assisting the custom team with jobs 
     Installed TV and AV systems. Assisted the custom install teams with installs
 	  Configured routers with access points in client's homes 
@@ -31,7 +28,6 @@
   company: Magnolia AV
   location: Danvers, MA and Brentwood, TN
   description: 
-
     Programmed and delivered AV products to clients, Ran wires through walls. Installed projector screens and speakers.
     Assisted the Custom teams with installations
     Installed TV and AV Systems 
@@ -41,10 +37,9 @@
   company: Insure & Go Insurance Services Ltd
   location: United Kingdom
   description: 
-
     Provided support for the Insure and Go users and infrastructure. Provided support for Windows operating systems, software applications used in-house, 
     telephone and email, Performed routine maintenance of the phone system and ensured the daily data backups were completed, 
-    Created a scripted system to create new user's and provide them with required access for their department, which saved time for the company.
+    Created a scripted system to create new users and provide them with required access for their department, which saved time for the company.
 	  Participated in the unveiling of a new VPN client for home employees,
 	  Built, configured, and troubleshot servers
 
@@ -53,9 +48,6 @@
   company: Insure & Go Insurance Services Ltd
   location: United Kingdom
   description: 
-
     Customer service for Insurance policy holders
     Resolved customer questions about the insurance policies
     Consulted with underwriters to resolve any questions/issues
-
-
