--- a/_data/experiences.yaml
+++ b/_data/experiences.yaml
@@ -2,8 +2,8 @@
   period: December 2022 - Present
   company: Geek Squad
   location: Nashville, TN
-  description:
-  	Drive a positive customer experience by building relationships and providing solutions to their needs, conduct regular reviews with Agents to develop them and close performance gaps, develop area and individual action plans to overcome performance gaps, conduct performance appraisals and make pay recommendations, ensure safety procedures are communicated proactively and followed by Agents, create consistency in service execution, ultimately protecting and growing the brand.Provide a teachable point of view for new processes, procedures, business segments, and areas of focus, develop and maintain pertinent partnerships to drive business results and improve the client experience, control costs and delivers productivity goals by analyzing business trends on a daily, weekly, monthly basis,.
+  description: >
+    Drive a positive customer experience by building relationships and providing solutions to their needs, conduct regular reviews with Agents to develop them and close performance gaps, develop area and individual action plans to overcome performance gaps, conduct performance appraisals and make pay recommendations, ensure safety procedures are communicated proactively and followed by Agents, create consistency in service execution, ultimately protecting and growing the brand.Provide a teachable point of view for new processes, procedures, business segments, and areas of focus, develop and maintain pertinent partnerships to drive business results and improve the client experience, control costs and delivers productivity goals by analyzing business trends on a daily, weekly, monthly basis.
 
 - title: Double Agent PC
   period: August 2019 - December 2022
