--- a/_data/profile.yaml
+++ b/_data/profile.yaml
@@ -1,17 +1,12 @@
 name: Gary Llewellyn
-title: PC Agent
+title: HSEAM
 firstName: "Gary"
 lastName: "Llewellyn"
 email: taffgal@gmail.com
 phone: 978-624-8441
 website:
 description: > # This means ignore new line until
-  Information Systems Technician
-  Experienced Information Systems Support Technician with the skills to maintain the integrity of the infrastructure being used and provide technical support for employees and clients.
-  AREAS OF EXPERTISE
-  Network Engineering/Support - Experience building and maintaining office and home employee PC's. Keen understanding of firewalls, routers, switches, and hubs. 
-  Software Solutions - Hands-on experience repairing and upgrading office applications in need of repair and to increase productivity. 
-  Key Strengths - Excel at interfacing with customers, engineers, and management. Talent for quickly learning new information, procedures, and technologies. Exceptionally organized and able to multitask. 
+  As a Home Services Experience Assistant Manager, I am directly responsible for day-to-day management of driving home channel fulfillment consistency, efficiency and quality of work completed by Best Buy/Geek Squad employees in their assigned area. This role ensures standard operating procedure execution and positively impacts client loyalty. While helping employees deliver operational effectiveness while growing the business.
 
 social:
   accounts: facebook,youtube,medium,behance,twitter,linkedin,github # add new account here and link in following
