--- a/_data/contact-links.yaml
+++ b/_data/contact-links.yaml
@@ -1,5 +1,5 @@
-- title: taffgal@gmail.com
-  link: 'mailto: taffgal@gmail.com'
+- title: gary@garyllewellyn.us
+  link: 'mailto: gary@garyllewellyn.us'
   icon-class: "fa fa-envelope"
 
 - title: "978-624-8441"
