--- a/_data/profile.yaml
+++ b/_data/profile.yaml
@@ -2,7 +2,7 @@ name: Gary Llewellyn
 title: HSEAM
 firstName: "Gary"
 lastName: "Llewellyn"
-email: taffgal@gmail.com
+email: gary@garyllewellyn.us
 phone: 978-624-8441
 website:
 description: > # This means ignore new line until
