Revise experiences for Geek Squad role
Updated job responsibilities and achievements for the Geek Squad role, emphasizing leadership, operational consistency, and customer experience.

--- a/_data/experiences.yaml
+++ b/_data/experiences.yaml
@@ -3,7 +3,15 @@
   company: Geek Squad
   location: Nashville, TN
   description: >
-    Drive a positive customer experience by building relationships and providing solutions to their needs, conduct regular reviews with Agents to develop them and close performance gaps, develop area and individual action plans to overcome performance gaps, conduct performance appraisals and make pay recommendations, ensure safety procedures are communicated proactively and followed by Agents, create consistency in service execution, ultimately protecting and growing the brand.Provide a teachable point of view for new processes, procedures, business segments, and areas of focus, develop and maintain pertinent partnerships to drive business results and improve the client experience, control costs and delivers productivity goals by analyzing business trends on a daily, weekly, monthly basis.
+Lead all store‑based delivery and installation operations across a multi‑location region, overseeing Geek Squad teams.
+Ensure operational consistency and strategic alignment by setting clear performance expectations, driving accountability, and executing business priorities across the field organization.
+Build and sustain an inclusive, high‑engagement team culture focused on belonging, leadership development, and strong customer outcomes.
+Manage workforce planning and capacity strategy, including hiring, scheduling, attendance, and PTO approvals to ensure adequate coverage and operational efficiency.
+Analyze service performance, labor metrics, customer trends, and operational reports to identify improvement opportunities and implement targeted action plans.
+Respond quickly to escalations, resolve issues collaboratively, and design long‑term solutions that protect and elevate the customer experience.
+Provide consistent 1:1 coaching, in‑field support, and on‑site leadership to develop employees, reinforce standards, and ensure high‑quality execution.
+Partner with internal and external teams to drive safety, compliance, productivity, and cost‑effectiveness across logistics, delivery, and installation operations.
+Maintain travel readiness (approx. 25%) to support teams across the region and provide hands‑on leadership where needed.
 
 - title: Double Agent PC
   period: August 2019 - December 2022
