Update title from 'HSEAM' to 'Repair Technician'

--- a/_data/profile.yaml
+++ b/_data/profile.yaml
@@ -1,5 +1,5 @@
 name: Gary Llewellyn
-title: HSEAM
+title: Repair Technician
 firstName: "Gary"
 lastName: "Llewellyn"
 email: gary@garyllewellyn.us
