Fix YAML parsing error in _data/experiences.yaml by normalizing indentation and block scalars

--- a/_data/experiences.yaml
+++ b/_data/experiences.yaml
@@ -3,21 +3,21 @@
   company: Geek Squad
   location: Nashville, TN
   description: >
-     Diagnose, disassemble, repair, and install major household appliances in customers’ homes, ensuring high‑quality workmanship and a seamless customer experience.
-     Manage daily service routes, lead two‑person crews, and oversee parts ordering, returns, and inventory to minimize operational costs and prevent losses.
-     Perform triage on complex device issues, provide clear and accurate explanations to customers, and offer alternative service solutions when repair is declined.
-     Maintain up‑to‑date and accurate work orders while consistently meeting productivity, safety, and compliance standards.
-     De‑escalate challenging customer interactions and deliver exceptional service, resulting in strong customer satisfaction and loyalty.
-     Conduct regular vehicle inspections and maintenance coordination to ensure safe and reliable field operations.
-     Provide coaching, training insights, and performance feedback to team members to support continuous improvement.
-     Utilize deep knowledge of home appliances, home theater systems, and consumer electronics to guide customers and recommend additional products or services.
-     
+    Diagnose, disassemble, repair, and install major household appliances in customers’ homes, ensuring high‑quality workmanship and a seamless customer experience.
+    Manage daily service routes, lead two‑person crews, and oversee parts ordering, returns, and inventory to minimize operational costs and prevent losses.
+    Perform triage on complex device issues, provide clear and accurate explanations to customers, and offer alternative service solutions when repair is declined.
+    Maintain up‑to‑date and accurate work orders while consistently meeting productivity, safety, and compliance standards.
+    De‑escalate challenging customer interactions and deliver exceptional service, resulting in strong customer satisfaction and loyalty.
+    Conduct regular vehicle inspections and maintenance coordination to ensure safe and reliable field operations.
+    Provide coaching, training insights, and performance feedback to team members to support continuous improvement.
+    Utilize deep knowledge of home appliances, home theater systems, and consumer electronics to guide customers and recommend additional products or services.
+
 - title: Home Services Repair Assistant Manager
   period: July 2023 - October 2025
   company: Geek Squad
   location: Nashville, TN
   description: >
-     Lead all in home repair operations across a multi‑location region, overseeing Geek Squad teams.
+    Lead all in home repair operations across a multi‑location region, overseeing Geek Squad teams.
     Ensure operational consistency and strategic alignment by setting clear performance expectations, driving accountability, and executing business priorities across the field organization.
     Build and sustain an inclusive, high‑engagement team culture focused on belonging, leadership development, and strong customer outcomes.
     Manage workforce planning and capacity strategy, including hiring, scheduling, attendance, and PTO approvals to ensure adequate coverage and operational efficiency.
@@ -46,11 +46,16 @@
   company: Geek Squad
   location: Nashville, TN
   description: >
-    Assisting clients with installation, repair, and troubleshooting of their PCs, MAC, printers, smart phones, surveillance equipment, smart devices, home monitoring, software, computer hardware in their homes and offices. Install and troubleshoot PCs, Macs, Networking setups, & Smart Home devices. Managed my own route & clients Worked remotely during COVID. Performed normal duties over LogMeIn. Participated in the internal management training program called Jedi. Regularly cover for my manager whilst they are on PTO and assume some of the roles. Selected as a S.T.A.R trainer to help train new hires within my market area
+    Assisting clients with installation, repair, and troubleshooting of their PCs, MAC, printers, smart phones, surveillance equipment, smart devices, home monitoring, software, computer hardware in their homes and offices.
+    Install and troubleshoot PCs, Macs, Networking setups, and Smart Home devices.
+    Managed my own route and clients. Worked remotely during COVID and performed normal duties over LogMeIn.
+    Participated in the internal management training program called Jedi.
+    Regularly covered for my manager whilst they were on PTO and assumed some of the roles.
+    Selected as a S.T.A.R trainer to help train new hires within my market area.
 
 - title: Custom In-Home Installer
   period: October 2016 - August 2019
   company: Magnolia AV
   location: Brentwood, TN
   description: >
-    Perform standard audio and video equipment installation in clients homes, including delivering AV equipment ordered by the customer, wall mounting televisions, setting up AV systems, and assisting the custom team with jobs. Installed TV and AV systems. Assisted the custom install teams with installs. Configured routers with access points in clients homes. Control 4 home automation.
+    Perform standard audio and video equipment installation in clients homes, including delivering AV equipment ordered by the customer, wall mounting televisions, setting up AV systems, and assisting with system configuration.
