--- a/_data/experiences.yaml
+++ b/_data/experiences.yaml
@@ -46,7 +46,7 @@
   company: Geek Squad
   location: Nashville, TN
   description: >
-    Assisting clients with installation, repair, and troubleshooting of their PCs, MAC, printers, smart phones, surveillance equipment, smart devices, home monitoring, software, computer hardware in their homes and offices. Install and troubleshoot PCs, Macs, Networking setups, & Smart Home devices. Managed my own route & clients Worked remotely during COVID. Performed normal duties over LogMeIn. Participated in the internal management training program called Jedi. Regularly cover for my manager whilst they are on PTO and assume some of the roles. Selected as a S.T.A.R trainer to help train new hires within my market area
+    Assisting clients with installation, repair, and troubleshooting of their PCs, MAC, printers, smart phones, surveillance equipment, smart devices, home monitoring, software, computer hardware in their homes and offices. Install and troubleshoot PCs, Macs, Networking setups, and Smart Home devices. Managed my own route and clients. Worked remotely during COVID. Performed normal duties over LogMeIn. Participated in the internal management training program called Jedi. Regularly cover for my manager whilst they are on PTO and assume some of the roles. Selected as a S.T.A.R trainer to help train new hires within my market area
 
 - title: Custom In-Home Installer
   period: October 2016 - August 2019
