--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -20,10 +20,10 @@ jobs:
           ruby-version: '3.1'
           bundler-cache: true
 
-      - name: Install dependencies (exclude GitHub Pages group to avoid conflicts)
+      - name: Install dependencies
         run: |
           bundle config set path vendor/bundle
-          bundle install --jobs 4 --retry 3 --without jekyll_plugins
+          bundle install --jobs 4 --retry 3
 
       - name: Build site
         run: bundle exec jekyll build --trace
