Revise profile description for clarity and detail
Updated the description to reflect current responsibilities and skills.

--- a/_data/profile.yaml
+++ b/_data/profile.yaml
@@ -6,8 +6,7 @@ email: gary@garyllewellyn.us
 phone: 978-624-8441
 website:
 description: > # This means ignore new line until
-  As a Home Services Experience Assistant Manager, I am directly responsible for day-to-day management of driving home channel fulfillment consistency, efficiency and quality of work completed by Best Buy/Geek Squad employees in their assigned area. This role ensures standard operating procedure execution and positively impacts client loyalty. While helping employees deliver operational effectiveness while growing the business.
-
+  As an experienced Home Services professional, I specialize in diagnosing, repairing, and installing major household appliances while delivering high‑quality workmanship and an exceptional in‑home customer experience. I manage daily service routes, lead two‑person crews, and oversee parts ordering, returns, and inventory to minimize costs and prevent losses. Skilled in triage and complex device troubleshooting, I provide customers with clear explanations and alternative service solutions when needed. I maintain accurate, up‑to‑date work orders and consistently meet productivity, safety, and compliance standards. Known for effective de‑escalation and customer‑focused service, I drive strong satisfaction and loyalty. I also conduct regular vehicle inspections, support field operations reliability, and provide coaching, training insights, and performance feedback to promote continuous improvement.
 social:
   accounts: facebook,youtube,medium,behance,twitter,linkedin,github # add new account here and link in following
   linkedin: linkedin.com/in/gary-llewellyn
