Revise profile description for clarity and brevity
Updated the profile description to be more concise and focused on key skills and responsibilities. The social accounts section remains unchanged.

--- a/_data/profile.yaml
+++ b/_data/profile.yaml
@@ -6,9 +6,8 @@ email: gary@garyllewellyn.us
 phone: 978-624-8441
 website:
 description: > # This means ignore new line until
-  As an experienced Home Services professional, I specialize in diagnosing, repairing, and installing major household appliances while delivering high‑quality workmanship and an exceptional in‑home customer experience. I manage daily service routes, lead two‑person crews, and oversee parts ordering, returns, and inventory to minimize costs and prevent losses. Skilled in triage and complex device troubleshooting, I provide customers with clear explanations and alternative service solutions when needed. I maintain accurate, up‑to‑date work orders and consistently meet productivity, safety, and compliance standards. Known for effective de‑escalation and customer‑focused service, I drive strong satisfaction and loyalty. I also conduct regular vehicle inspections, support field operations reliability, and provide coaching, training insights, and performance feedback to promote continuous improvement.
-social:
-  accounts: facebook,youtube,medium,behance,twitter,linkedin,github # add new account here and link in following
+Experienced Home Services technician skilled in diagnosing and repairing major appliances and televisions while delivering exceptional in‑home service. I manage daily service routes, lead two‑person crews, and oversee parts and inventory to reduce costs and prevent losses. Strong in troubleshooting, customer communication, and de‑escalation, I maintain accurate work orders and consistently meet productivity, safety, and compliance standards. I conduct regular vehicle inspections and provide coaching and performance feedback to support reliable operations and continuous improvement.
+social: accounts: facebook,youtube,medium,behance,twitter,linkedin,github # add new account here and link in following
   linkedin: linkedin.com/in/gary-llewellyn
   twitter: https://twitter.com/wedi_blino
   github: https://github.com/taffo73
