--- a/_data/profile.yaml
+++ b/_data/profile.yaml
@@ -2,16 +2,19 @@ name: Gary Llewellyn
 title: Repair Technician
 firstName: "Gary"
 lastName: "Llewellyn"
-email: gary@garyllewellyn.us
-phone: 978-624-8441
-website:
-description: > # This means ignore new line until
- As an experienced Home Services technician skilled in diagnosing and repairing major appliances and televisions while delivering exceptional in‑home service. I manage daily service routes, lead two‑person crews, and oversee parts and inventory to reduce costs and prevent losses. Strong in troubleshooting, customer communication, and de‑escalation, I maintain accurate work orders and consistently meet productivity, safety, and compliance standards. I conduct regular vehicle inspections and provide coaching and performance feedback to support reliable operations and continuous improvement.
-social: accounts: facebook,youtube,medium,behance,twitter,linkedin,github # add new account here and link in following
-  linkedin: linkedin.com/in/gary-llewellyn
-  twitter: https://twitter.com/wedi_blino
-  github: https://github.com/taffo73
-  facebook:
-  youtube:
-  medium:
-  behance:
+email: "gary@garyllewellyn.us"
+phone: "978-624-8441"
+website: ""
+description: >
+  As an experienced Home Services technician skilled in diagnosing and
+  repairing major appliances and televisions while delivering exceptional
+  in‑home service. I manage daily service routes, lead [...]
+social:
+  accounts: "facebook,youtube,medium,behance,twitter,linkedin,github"
+  linkedin: "linkedin.com/in/gary-llewellyn"
+  twitter: "https://twitter.com/wedi_blino"
+  github: "https://github.com/taffo73"
+  facebook: ""
+  youtube: ""
+  medium: ""
+  behance: ""
